--- a/portfolio_site/src/components/topbar.scss
+++ b/portfolio_site/src/components/topbar.scss
@@ -3,7 +3,7 @@
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: white;
+  background-color: rgb(242, 245, 245);
   color: $mainColor;
   position: fixed;
   top: 0;
